# SnakesVsCentipedes

./: .gitignore  CMakeLists.txt  CMakePresets.json  Game.cpp  Game.h  GameMode.h  GameOverScreen.cpp  GameOverScreen.h  Main.cpp  Map.cpp  Map.h  Menu.cpp  Menu.h  RoundSettings.h  Segment.cpp  Segment.h  Snake.cpp  Snake.h  vcpkg-configuration.json
